<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/question_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/favorite_color_txt"
        android:layout_marginBottom="5dp"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radioColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/favorite_color_1" />

        <RadioButton
            android:id="@+id/radioYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_color_2" />

        <RadioButton
            android:id="@+id/radioBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_color_3" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_color_4" />

        <RadioButton
            android:id="@+id/radioBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite_color_5" />
    </RadioGroup>

    <Button
        android:id="@+id/done"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/done_button_txt" />

</LinearLayout>