<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_question_txt"
        android:textSize="20sp"
        android:layout_margin="5dp" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_answer_1"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_answer_2"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_answer_3"
        android:layout_margin="10dp" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_answer_4"
        android:layout_margin="10dp" />

</LinearLayout>